Fix padding of navbar and vertical align of icons

--- a/projects/ngx-devjagz-navbar/src/ui-navbar/components/navbar/navbar.component.scss
+++ b/projects/ngx-devjagz-navbar/src/ui-navbar/components/navbar/navbar.component.scss
@@ -11,7 +11,7 @@ ul {
 }
 
 .navbar {
-  padding: 2rem;
+  padding: 1.2rem 2rem;
   border: 1px solid white;
 
   &__container {
@@ -47,7 +47,8 @@ ul {
 
 
           .navbar__menu__item__icon {
-            transform: translateY(0px);
+            top: auto;
+            transform: translateY(0);
             cursor: auto;
             min-width: auto;
             min-height: auto;
@@ -56,7 +57,8 @@ ul {
           .navbar__menu__item__text {
             padding: 0.25rem 1rem;
             opacity: 1;
-            transform: translateY(0px);
+            top: auto;
+            transform: translateY(0);
             width: auto;
             font-size: 0.7rem;
 
@@ -81,7 +83,8 @@ ul {
         align-items: center;
         justify-items: center;
         position: relative;
-        transform: translateY(50%);
+        top: 50%;
+        transform: translateY(-50%);
         transition: 0.5s;
         cursor: pointer;
         width: 24px;
